docs/i18n/or/docusaurus-plugin-content-docs/version-1.3/shortcuts.md
---
title: "Shortcuts"
sidebar_position: 2
---

There are a few shortcuts that you can use in the editor. Some of them are written below the buttons.

## ସାଧାରଣ

* `Ctrl` + `N`: New file
* `Ctrl` + `Shift` + `N`: New file from template
* `Ctrl` + `O`: Open file
* `Ctrl` + `I`: Import file
* `Ctrl` + `E`: Export file
* `Ctrl` + `Shift` + `E`: Export file as image
* `Ctrl` + `Alt` + `E`: Export file as svg
* `Ctrl` + `Alt` + `S`: Open settings

## Project

* `Ctrl` + `Z`: Undo
* `Ctrl` + `Y`: Redo
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Open project settings
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Open color palette dialog
* `Ctrl` + `B`: Open background dialog
* `Ctrl` + `Shift` + `A`: Open areas dialog
* `Ctrl` + `L`: Open layers dialog
* `Ctrl` + `S`: Save
* `Alt` + `S`: Change path
